# ZigZag

./: .gitignore  .travis.yml  CHANGES.txt  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  README.txt  Untitled.ipynb  appveyor.yml  build.py  issue_13.ipynb  nope.txt  pyproject.toml  requirements.txt  setup.py  zigzag_demo.ipynb
.github/workflows/: build-and-test-python.yml  build_and_test_python.yml
tests/: test_core.py
zigzag/: __init__.py  core.pyx  plotting.py
zigzag/tests/: test_tsgeom.py
