[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "zigzag"
version = "0.3.0"
description = "Package for finding peaks and valleys of time series."
authors = ["generativist <jbn@abreka.com>"]
license = "BSD-3-Clause"
packages = [{ include = "zigzag" }]
include = [{ path = "zigzag/**/*.so", format = "wheel" }]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "^1.23.1"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
Cython = "^0.29.30"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]